--- a/html1.html
+++ b/html1.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Materialize</title>
+        <title>Vehicules</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -13,7 +13,7 @@
         <header>
             <nav id="nav_bar">
                 <div class="nav-wrapper">
-                <a href="#!" class="brand-logo"><i class="material-icons">cloud</i>Logo</a>
+                <a href="https://www.google.com/search?sxsrf=ALeKk01Drhnn8Y6hC5WDqges5MKxQdwemg:1593436692381&source=univ&tbm=isch&q=vehicules&sa=X&ved=2ahUKEwjcwpWgjqfqAhVI2KQKHZbcAh8QsAR6BAgKEAE&biw=1920&bih=969" class="brand-logo"><i class="material-icons"></i>VEHICULES</a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="sass.html"><i class="material-icons">search</i></a></li>
                     <li><a href="badges.html"><i class="material-icons">view_module</i></a></li>
@@ -82,15 +82,18 @@
                   </tr>
                 </tbody>
               </table>
+            <div class="form">
+          <label class="label">ENTER THE AGE HERE</label>
+          <input type="number" min="1" placeholder="........." class="input" id='age_input'>
+          <button id="checkAge_btn">OK</button>
+        </div>
         </content>
         <footer class="align_center">
-            <button class="left btn waves-effect waves-light weight text_color" type="register" name="action">REGISTER
-                <i class="material-icons right">send</i>
-            </button>
-            <button class="right btn waves-effect waves-light weight text_color" type="submit" name="action">SUBMIT
+            <button class="left btn waves-effect waves-light weight text_color" id="click_reg" type="register" name="action">REGISTER
                 <i class="material-icons right">send</i>
             </button>
         </footer>
+        <script src="framework.js"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
